deploy/k8s/n8n/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-n8n
  namespace: podwise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-n8n
  template:
    metadata:
      labels:
        app: my-n8n
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker4
      containers:
        - name: n8n
          image: registry.192.168.32.126.nip.io/podwise/my-n8n-bge:node20
          imagePullPolicy: Always
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-pvc
