deploy/k8s/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-n8n
  namespace: podwise
  labels:
    app.kubernetes.io/instance: my-n8n
    app.kubernetes.io/name: n8n
spec:
  type: NodePort
  ports:
    - port: 5678
      targetPort: 5678
      nodePort: 30567
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: my-n8n
    app.kubernetes.io/name: n8n
    app.kubernetes.io/type: master
